--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   background-color: #333;
   font-family: sans-serif;
@@ -11,11 +15,44 @@ body {
 
 nav {
   margin: 0 auto;
-  padding: 10px 0 15px 15px;
+  padding: 15px 0 15px 15px;
   position: fixed;
   width: 420px;
+  background-color: #000;
 }
 
 .restaurant-list {
   padding-top: 50px;
+  background-color: #fff;
+}
+
+.location {
+  padding: 20px;
+  border-bottom: 1px solid #000;
+}
+
+.location:hover {
+  background-color: #d3d3d3;
+}
+
+.content {
+  display: inline-block;
+  width: 95%;
+}
+
+.content h1 {
+  font-size: 1.8em;
+  font-weight: 900;
+}
+
+.content h3 {
+  font-size: 1.4em;
+  font-weight: 500;
+  line-height: 1.5;
+}
+
+.arrow {
+  float: right;
+  padding-top: 10px;
+  width: 5%;
 }
